rustdocs/errors/rust-bitcoin-io-tests-api.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/io/tests/api.rs:10:5
   |
10 | use core::cell::Cell;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/io/tests/api.rs:11:5
   |
11 | use core::convert::Infallible;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved imports `bitcoin_io`, `bitcoin_io`
  --> ../rust-bitcoin/io/tests/api.rs:14:5
   |
14 | use bitcoin_io::{self as io, BufRead, Cursor, ErrorKind, Read, Sink, Tak...
   |     ^^^^^^^^^^   ^^^^^^^^^^ no `bitcoin_io` in the root
   |     |
   |     use of unresolved module or unlinked crate `bitcoin_io`
   |
help: you might be missing a crate named `bitcoin_io`, add it to your project and import it in your code
   |
10 + extern crate bitcoin_io;
   |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
